# sender-email-script

./: config.py  main.py  params.json  pyproject.toml  utils.py
