[project]
name = "email-sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "aiosmtplib>=4.0.0",
    "apscheduler>=3.11.0",
    "arq>=0.26.3",
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
    "prisma>=0.10.0",
    "sqlalchemy>=2.0.40",
]
